# agv_and_arm

./: README.md
src/aubo_robot/aubo_demo/: CMakeLists.txt
src/aubo_robot/aubo_demo/src/: step_all.cpp  step_one.cpp  step_three.cpp  step_two.cpp
src/aubo_robot/aubo_demo/src/include/aubo_msgs/: Analog.h  Digital.h  GetFKRequest.h  GetFKResponse.h  GetIKRequest.h  GetIKResponse.h  GoalPoint.h  IOState.h  JointPos.h  SetIO.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  TraPoint.h
src/aubo_robot/aubo_description/urdf/: aubo_i5.urdf.xacro  aubo_i5_gai.urdf  g_aubo_i5.urdf.xacro
src/aubo_robot/aubo_driver/: CMakeLists.txt
src/aubo_robot/change_aubo_i5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/aubo_robot/change_aubo_i5_moveit_config/config/: aubo_i5.srdf  fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
src/aubo_robot/change_aubo_i5_moveit_config/launch/: aubo_i5_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/aubo_robot/gai_moveit_config15/: .setup_assistant  CMakeLists.txt  README.txt  package.xml
src/aubo_robot/gai_moveit_config15/config/: aubo_i5.srdf  kinematics.yaml
src/aubo_robot/gai_moveit_config15/launch/: aubo_i5_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/cmd_vel_control/: CMakeLists.txt  package.xml
src/cmd_vel_control/include/: cmd_vel_control.h
src/cmd_vel_control/src/: cmd_vel_control.cpp
src/joy_control/: CMakeLists.txt  package.xml
src/joy_control/include/: joy_control.h
src/joy_control/src/: joy_control.cpp
src/msglist/: CMakeLists.txt  package.xml
src/msglist/msg/: encoder.msg
src/msglist/src/: encoder.h
src/odom/: CMakeLists.txt  package.xml
src/odom/include/: odom.h
src/odom/launch/: bringup_no_joy.launch  gmapping.launch  gmapping.rviz  robot_navigation.launch  robot_odom.launch  robot_slam.launch  room_10.6.yaml
src/odom/src/: odom.cpp
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/launch/: 10_6_amcl.launch  10_6_move_base.launch  10_6_move_base_map.launch  10_6_navigation.launch  fake_amcl.launch
src/robot_navigation/launch/old/: amcl.launch  fake_amcl.launch  fake_move_base.launch  fake_move_base_amcl.launch  move_base.launch  move_base_map.launch  yipeng_navigation.launch
src/robot_navigation/maps/: blank_map.yaml  first_floor.pgm  first_floor.yaml  room.pgm  room3.pgm  room3.yaml  room_10_6.pgm  zoulang.pgm  zoulang.yaml
src/robot_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  z_base_local_planner_params.yaml  z_costmap_common_params.yaml  z_global_costmap_params.yaml  z_local_costmap_params.yaml
src/robot_navigation/rviz/: nav.rviz  nav_test.rviz
src/robot_navigation/scripts/: print_pose.py
src/robot_navigation/src/: agv_move.cpp
src/yp_linshi/: CMakeLists.txt  package.xml
src/yp_linshi/launch/: arm_bringup.launch  calibration_step_1.launch  calibration_step_2.launch  calibration_step_3.launch  rs_aligned_depth.launch
src/yp_linshi/script/: show_center_depth.py
src/yp_linshi/src/: fabu_lins.cpp  yp_transform.cpp
